--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
           </div>
           <!-- Right: Image & Graphics -->
           <div class="flex-1 flex flex-col items-center justify-center relative mt-8 md:mt-0">
-            <img src="../assets/myPhoto2.png" alt="Profile" class="rounded-lg w-[250px] sm:w-[300px] md:w-[350px] h-[350px] sm:h-[400px] md:h-[480px] object-cover object-top shadow-xl border-4 border-white relative z-20" />
+            <img src="assets/myPhoto2.png" alt="Profile" class="rounded-lg w-[250px] sm:w-[300px] md:w-[350px] h-[350px] sm:h-[400px] md:h-[480px] object-cover object-top shadow-xl border-4 border-white relative z-20" />
             <span class="squiggle">
               <svg viewBox="0 0 32 32">
                 <path d="M2,16 C8,32 24,0 30,16" stroke="#111" stroke-width="2.5" fill="none"/>
@@ -566,7 +566,7 @@
         </div>
         <div class="max-w-5xl mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8">
           <div class="bg-white border border-black rounded-xl shadow-md flex flex-col hover:shadow-xl transition overflow-hidden">
-            <img src="../assets/soty.jpg" class="h-[120px] sm:h-[160px] w-full object-cover" />
+            <img src="assets/soty.jpg" class="h-[120px] sm:h-[160px] w-full object-cover" />
             <div class="flex flex-col p-5 sm:p-7 flex-1 justify-between">
               <div class="flex items-center mb-4">
                 <div>
@@ -580,7 +580,7 @@
             </div>
           </div>
           <div class="bg-white border border-black rounded-xl shadow-md flex flex-col hover:shadow-xl transition overflow-hidden">
-            <img src="../assets/bnsp.jpg" class="h-[120px] sm:h-[160px] w-full object-cover" />
+            <img src="assets/bnsp.jpg" class="h-[120px] sm:h-[160px] w-full object-cover" />
             <div class="flex flex-col p-5 sm:p-7 flex-1 justify-between">
               <div class="flex items-center mb-4">
                 <div>
@@ -594,7 +594,7 @@
             </div>
           </div>
           <div class="bg-white border border-black rounded-xl shadow-md flex flex-col hover:shadow-xl transition overflow-hidden">
-            <img src="../assets/pkl.jpg" alt="Behance Feature" class="h-[120px] sm:h-[160px] w-full object-cover" />
+            <img src="assets/pkl.jpg" alt="Behance Feature" class="h-[120px] sm:h-[160px] w-full object-cover" />
             <div class="flex flex-col p-5 sm:p-7 flex-1 justify-between">
               <div class="flex items-center mb-4">
                 <div>
@@ -608,7 +608,7 @@
             </div>
           </div>
           <div class="bg-white border border-black rounded-xl shadow-md flex flex-col hover:shadow-xl transition overflow-hidden">
-            <img src="../assets/webStatic.png" alt="Web Static Competition" class="h-[120px] sm:h-[160px] w-full object-cover" />
+            <img src="assets/webStatic.png" alt="Web Static Competition" class="h-[120px] sm:h-[160px] w-full object-cover" />
             <div class="flex flex-col p-5 sm:p-7 flex-1 justify-between">
               <div class="flex items-center mb-4">
                 <div>
@@ -664,7 +664,7 @@
                   <polygon points="90,10 123,39 171,60 143,103 147,157 90,142 33,157 37,103 9,60 57,39" fill="#ececec" />
                 </svg>
               </div>
-              <img src="../assets/myPhoto.png" alt="Client Photo" class="absolute inset-0 m-auto rounded-none w-[160px] sm:w-[200px] h-[160px] sm:h-[200px] object-cover object-top" style="clip-path: polygon(50% 0%, 85% 22%, 98% 62%, 75% 100%, 25% 100%, 2% 62%, 15% 22%);"/>
+              <img src="assets/myPhoto.png" alt="Client Photo" class="absolute inset-0 m-auto rounded-none w-[160px] sm:w-[200px] h-[160px] sm:h-[200px] object-cover object-top" style="clip-path: polygon(50% 0%, 85% 22%, 98% 62%, 75% 100%, 25% 100%, 2% 62%, 15% 22%);"/>
             </div>
           </div>
           <div class="absolute left-0 bottom-3">
