--- a/index.html
+++ b/index.html
@@ -475,6 +475,39 @@
       </div>
     </section>
 
+    <!-- Modal Frontend -->
+    <div id="modal-frontend" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50">
+      <div class="relative max-w-5xl w-full max-h-[90vh] overflow-auto rounded-lg shadow-lg">
+        <button onclick="toggleModal('modal-frontend')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
+          &times;
+        </button>
+        <img src="assets/public/2.png" alt="Frontend Services" class="w-full h-auto object-contain rounded-lg">
+      </div>
+    </div>
+
+    <!-- Modal Backend -->
+    <div id="modal-backend" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50">
+      <div class="relative max-w-5xl w-full max-h-[90vh] overflow-auto rounded-lg shadow-lg">
+        <button onclick="toggleModal('modal-backend')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
+          &times;
+        </button>
+        <img src="assets/public/4.png" alt="Backend Services" class="w-full h-auto object-contain rounded-lg">
+      </div>
+    </div>
+
+    <!-- Modal Fullstack -->
+    <div id="modal-fullstack" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50">
+      <div class="relative max-w-5xl w-full max-h-[90vh] overflow-auto rounded-lg shadow-lg">
+        <button onclick="toggleModal('modal-fullstack')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
+          &times;
+        </button>
+        <img src="assets/public/6.png" alt="Fullstack Services" class="w-full h-auto object-contain rounded-lg">
+      </div>
+    </div>
+
+
+
+
     <!-- Experience Section -->
     <section class="section-fade opacity-0" data-delay="400">
       <div class="w-full py-20 px-4 md:px-6 lg:px-8 font-sans bg-white">
