--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         <button onclick="toggleModal('modal-frontend')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
           &times;
         </button>
-        <img src="assets/public/2.png" alt="Frontend Services" class="w-full h-auto object-contain rounded-lg">
+        <img src="assets/2.png" alt="Frontend Services" class="w-full h-auto object-contain rounded-lg">
       </div>
     </div>
 
@@ -491,7 +491,7 @@
         <button onclick="toggleModal('modal-backend')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
           &times;
         </button>
-        <img src="assets/public/4.png" alt="Backend Services" class="w-full h-auto object-contain rounded-lg">
+        <img src="assets/4.png" alt="Backend Services" class="w-full h-auto object-contain rounded-lg">
       </div>
     </div>
 
@@ -501,7 +501,7 @@
         <button onclick="toggleModal('modal-fullstack')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
           &times;
         </button>
-        <img src="assets/public/6.png" alt="Fullstack Services" class="w-full h-auto object-contain rounded-lg">
+        <img src="assets/6.png" alt="Fullstack Services" class="w-full h-auto object-contain rounded-lg">
       </div>
     </div>
 
