--- a/index.html
+++ b/index.html
@@ -481,6 +481,10 @@
         <button onclick="toggleModal('modal-frontend')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
           &times;
         </button>
+        <button onclick="toggleModal('modal-frontend')" 
+            class="absolute top-3 right-3 text-white bg-black/60 hover:bg-black/80 rounded-full p-1 w-8 h-8 flex items-center justify-center">
+          &times;
+        </button>
         <img src="assets/2.png" alt="Frontend Services" class="w-full h-auto object-contain rounded-lg">
       </div>
     </div>
@@ -491,6 +495,10 @@
         <button onclick="toggleModal('modal-backend')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
           &times;
         </button>
+        <button onclick="toggleModal('modal-backend')" 
+            class="absolute top-3 right-3 text-white bg-black/60 hover:bg-black/80 rounded-full p-1 w-8 h-8 flex items-center justify-center">
+          &times;
+        </button>
         <img src="assets/4.png" alt="Backend Services" class="w-full h-auto object-contain rounded-lg">
       </div>
     </div>
@@ -499,6 +507,10 @@
     <div id="modal-fullstack" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50">
       <div class="relative max-w-5xl w-full max-h-[90vh] overflow-auto rounded-lg shadow-lg">
         <button onclick="toggleModal('modal-fullstack')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
+          &times;
+        </button>
+        <button onclick="toggleModal('modal-fullstack')" 
+            class="absolute top-3 right-3 text-white bg-black/60 hover:bg-black/80 rounded-full p-1 w-8 h-8 flex items-center justify-center">
           &times;
         </button>
         <img src="assets/6.png" alt="Fullstack Services" class="w-full h-auto object-contain rounded-lg">
