--- a/index.html
+++ b/index.html
@@ -478,13 +478,13 @@
     <!-- Modal Frontend -->
     <div id="modal-frontend" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50">
       <div class="relative max-w-5xl w-full max-h-[90vh] overflow-auto rounded-lg shadow-lg">
-        <button onclick="toggleModal('modal-frontend')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
-          &times;
-        </button>
         <button onclick="toggleModal('modal-frontend')" 
-            class="absolute top-3 right-3 text-white bg-black/60 hover:bg-black/80 rounded-full p-1 w-8 h-8 flex items-center justify-center">
-          &times;
-        </button>
+      class="absolute top-2 right-2 text-white bg-black/50 hover:bg-black/70 rounded-full p-2 w-8 h-8 flex items-center justify-center">
+      <!-- Heroicons X -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+      </svg>
+    </button>
         <img src="assets/2.png" alt="Frontend Services" class="w-full h-auto object-contain rounded-lg">
       </div>
     </div>
@@ -492,13 +492,13 @@
     <!-- Modal Backend -->
     <div id="modal-backend" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50">
       <div class="relative max-w-5xl w-full max-h-[90vh] overflow-auto rounded-lg shadow-lg">
-        <button onclick="toggleModal('modal-backend')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
-          &times;
-        </button>
         <button onclick="toggleModal('modal-backend')" 
-            class="absolute top-3 right-3 text-white bg-black/60 hover:bg-black/80 rounded-full p-1 w-8 h-8 flex items-center justify-center">
-          &times;
-        </button>
+      class="absolute top-2 right-2 text-white bg-black/50 hover:bg-black/70 rounded-full p-2 w-8 h-8 flex items-center justify-center">
+      <!-- Heroicons X -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+      </svg>
+    </button>
         <img src="assets/4.png" alt="Backend Services" class="w-full h-auto object-contain rounded-lg">
       </div>
     </div>
@@ -506,19 +506,16 @@
     <!-- Modal Fullstack -->
     <div id="modal-fullstack" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50">
       <div class="relative max-w-5xl w-full max-h-[90vh] overflow-auto rounded-lg shadow-lg">
-        <button onclick="toggleModal('modal-fullstack')" class="absolute top-3 right-3 text-white text-3xl hover:text-red-400">
-          &times;
-        </button>
-        <button onclick="toggleModal('modal-fullstack')" 
-            class="absolute top-3 right-3 text-white bg-black/60 hover:bg-black/80 rounded-full p-1 w-8 h-8 flex items-center justify-center">
-          &times;
-        </button>
+       <button onclick="toggleModal('modal-fullstack')" 
+      class="absolute top-2 right-2 text-white bg-black/50 hover:bg-black/70 rounded-full p-2 w-8 h-8 flex items-center justify-center">
+      <!-- Heroicons X -->
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+      </svg>
+    </button>
         <img src="assets/6.png" alt="Fullstack Services" class="w-full h-auto object-contain rounded-lg">
       </div>
     </div>
-
-
-
 
     <!-- Experience Section -->
     <section class="section-fade opacity-0" data-delay="400">
