--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           </div>
           <div id="dropdown-container" class="relative w-full">
             <button id="dropdownButton" class="flex items-center justify-center w-full sm:w-auto text-sm font-medium text-black px-4 py-2 border border-black rounded-lg hover:bg-gray-100 transition md:hidden">
-              Menu
+              Content
               <svg class="w-4 h-4 ml-1 dropdown-arrow" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 20 20">
                 <path d="M7 10l5 5 5-5"></path>
               </svg>
@@ -360,10 +360,10 @@
               </li>
             </ul>
             <div class="flex gap-4 relative">
-              <button class="border border-black rounded-full px-5 sm:px-7 py-2 text-sm sm:text-base font-medium flex items-center gap-1 hover:bg-gray-100 transition">
-                Download Cv
+              <a href="assets/ATS CV_Henokh.pdf" download class="border border-black rounded-full px-5 sm:px-7 py-2 text-sm sm:text-base font-medium flex items-center gap-1 hover:bg-gray-100 transition">
+                Download CV
                 <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 20 20"><path d="M7 10l5 5 5-5"></path></svg>
-              </button>
+              </a>
             </div>
           </div>
           <!-- Right: Image & Graphics -->
@@ -528,7 +528,7 @@
           </div>
           <h2 class="text-3xl md:text-4xl font-extrabold tracking-wide mb-2">EXPERIENCE</h2>
           <p class="text-xs md:text-sm text-black/80 mt-2 mb-7">
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+            I craft clean, efficient, and user‑focused web solutions backed by solid industry experience and continuous learning.
           </p>
         </div>
         <div class="max-w-4xl mx-auto flex flex-col gap-4">
