--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
       <div class="w-full bg-white py-12 sm:py-20 px-4 sm:px-6 lg:px-8 font-sans">
         <div class="flex flex-col sm:flex-row justify-between items-center max-w-6xl mx-auto gap-4">
           <div class="flex flex-wrap items-center gap-4 sm:gap-6 w-full justify-center sm:justify-start">
-            <span class="h-px w-12 sm:w-16 bg-black"></span>
+            <span class="h-px w-8 sm:w-16 bg-black"></span>
             <a href="https://github.com/ZhennLabs" class="flex items-center gap-1 text-xs font-medium text-black hover:underline">
               <svg class="w-3.5 h-3.5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.011-1.04-.017-2.04-3.338.726-4.042-1.415-4.042-1.415-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.084-.729.084-.729 1.205.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495.997.108-.775.418-1.305.762-1.606-2.665-.304-5.466-1.334-5.466-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.873.119 3.176.77.84 1.235 1.91 1.235 3.221 0 4.609-2.805 5.625-5.476 5.921.43.372.814 1.103.814 2.222 0 1.606-.014 2.898-.014 3.293 0 .319.216.694.825.576C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"></path></svg>
               GITHUB
@@ -397,7 +397,7 @@
               <svg class="w-3.5 h-3.5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.849.07 1.366.062 2.633.314 3.608 1.289.975.975 1.227 2.243 1.289 3.608.058 1.265.069 1.645.069 4.849s-.011 3.584-.069 4.849c-.062 1.366-.314 2.633-1.289 3.608-.975.975-2.243 1.227-3.608 1.289-1.265.058-1.645.069-4.849.069s-3.584-.011-4.849-.069c-1.366-.062-2.633-.314-3.608-1.289-.975-.975-1.227-2.243-1.289-3.608C2.175 15.646 2.163 15.266 2.163 12s.012-3.584.07-4.849c.062-1.366.314-2.633 1.289-3.608.975-.975 2.243-1.227 3.608-1.289C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.014 7.052.072 5.777.13 4.602.355 3.635 1.322 2.668 2.289 2.443 3.464 2.385 4.739.014 8.332 0 8.741 0 12c0 3.259.014 3.668.072 4.948.058 1.275.283 2.45 1.25 3.417.967.967 2.142 1.192 3.417 1.25C8.332 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 1.275-.058 2.45-.283 3.417-1.25.967-.967 1.192-2.142 1.25-3.417.058-1.28.072-1.689.072-4.948s-.014-3.668-.072-4.948c-.058-1.275-.283-2.45-1.25-3.417C19.398.355 18.223.13 16.948.072 15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a3.999 3.999 0 1 1 0-7.998 3.999 3.999 0 0 1 0 7.998zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"/></svg>
               INSTAGRAM
             </a>
-            <span class="h-px w-12 sm:w-16 bg-black"></span>
+            <span class="h-px w-8 sm:w-16 bg-black"></span>
           </div>
           <div class="flex items-center gap-2">
             <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M4 4h16v16H4z" fill="none"/><path d="M22 6l-10 7L2 6"/></svg>
@@ -475,12 +475,10 @@
       </div>
     </section>
 
-    <!-- Modal Frontend -->
     <div id="modal-frontend" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50">
       <div class="relative max-w-5xl w-full max-h-[90vh] overflow-auto rounded-lg shadow-lg">
         <button onclick="toggleModal('modal-frontend')" 
       class="absolute top-2 right-2 text-white bg-black/50 hover:bg-black/70 rounded-full p-2 w-8 h-8 flex items-center justify-center">
-      <!-- Heroicons X -->
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
       </svg>
@@ -489,12 +487,10 @@
       </div>
     </div>
 
-    <!-- Modal Backend -->
     <div id="modal-backend" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50">
       <div class="relative max-w-5xl w-full max-h-[90vh] overflow-auto rounded-lg shadow-lg">
         <button onclick="toggleModal('modal-backend')" 
       class="absolute top-2 right-2 text-white bg-black/50 hover:bg-black/70 rounded-full p-2 w-8 h-8 flex items-center justify-center">
-      <!-- Heroicons X -->
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
       </svg>
@@ -503,12 +499,10 @@
       </div>
     </div>
 
-    <!-- Modal Fullstack -->
     <div id="modal-fullstack" class="fixed inset-0 bg-black/80 hidden items-center justify-center z-50">
       <div class="relative max-w-5xl w-full max-h-[90vh] overflow-auto rounded-lg shadow-lg">
        <button onclick="toggleModal('modal-fullstack')" 
       class="absolute top-2 right-2 text-white bg-black/50 hover:bg-black/70 rounded-full p-2 w-8 h-8 flex items-center justify-center">
-      <!-- Heroicons X -->
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
       </svg>
@@ -576,6 +570,13 @@
               <span class="uppercase text-xs md:text-sm font-semibold tracking-wide">Job Duration - Now</span>
             </div>
           </div>
+          <p class="text-md text-center md:text-sm text-black/80 mt-16 mb-7 flex justify-center items-center gap-2">
+            See more on my 
+            <a href="https://github.com/ZhennLabs" target="_blank" class="flex items-center gap-1 text-black hover:text-gray-700 transition">
+              <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.011-1.04-.017-2.04-3.338.726-4.042-1.415-4.042-1.415-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.084-.729.084-.729 1.205.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495.997.108-.775.418-1.305.762-1.606-2.665-.304-5.466-1.334-5.466-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.873.119 3.176.77.84 1.235 1.91 1.235 3.221 0 4.609-2.805 5.625-5.476 5.921.43.372.814 1.103.814 2.222 0 1.606-.014 2.898-.014 3.293 0 .319.216.694.825.576C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"></path></svg>
+              <span class="underline underline-offset-4">GitHub</span>
+            </a>
+          </p>
         </div>
       </div>
     </section>
