--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </li>
             </ul>
             <div class="flex gap-4 relative">
-              <a href="assets/ATS CV_Henokh.pdf" download class="border border-black rounded-full px-5 sm:px-7 py-2 text-sm sm:text-base font-medium flex items-center gap-1 hover:bg-gray-100 transition">
+              <a href="assets/ATS_CV_Henokh.pdf" download class="border border-black rounded-full px-5 sm:px-7 py-2 text-sm sm:text-base font-medium flex items-center gap-1 hover:bg-gray-100 transition">
                 Download CV
                 <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 20 20"><path d="M7 10l5 5 5-5"></path></svg>
               </a>
@@ -97,7 +97,7 @@
           </div>
           <!-- Right: Image & Graphics -->
           <div class="flex-1 flex flex-col items-center justify-center relative mt-8 md:mt-0">
-            <img src="assets/myPhoto2.png" alt="Profile" class="rounded-lg w-[250px] sm:w-[300px] md:w-[350px] h-[350px] sm:h-[400px] md:h-[480px] object-cover object-top shadow-xl border-4 border-white relative z-20" />
+            <img src="assets/myPhoto2.png" alt="Profile" class="rounded-lg w-[250px] sm:w-[300px] md:w-[350px] h-[350px] sm:h-[400px] md:h-[480px] object-cover object-top shadow-xl border-4 border-white relative z-20">
             <span class="squiggle">
               <svg viewBox="0 0 32 32">
                 <path d="M2,16 C8,32 24,0 30,16" stroke="#111" stroke-width="2.5" fill="none"/>
@@ -547,7 +547,7 @@
         </div>
         <div class="max-w-5xl mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8">
           <div class="bg-white border border-black rounded-xl shadow-md flex flex-col hover:shadow-xl transition overflow-hidden">
-            <img src="assets/soty.jpg" class="h-[120px] sm:h-[160px] w-full object-cover" />
+            <img src="assets/soty.jpg" alt="SOTY Award" class="h-[120px] sm:h-[160px] w-full object-cover">
             <div class="flex flex-col p-5 sm:p-7 flex-1 justify-between">
               <div class="flex items-center mb-4">
                 <div>
@@ -561,7 +561,7 @@
             </div>
           </div>
           <div class="bg-white border border-black rounded-xl shadow-md flex flex-col hover:shadow-xl transition overflow-hidden">
-            <img src="assets/bnsp.jpg" class="h-[120px] sm:h-[160px] w-full object-cover" />
+            <img src="assets/bnsp.jpg" alt="BNSP Certificate" class="h-[120px] sm:h-[160px] w-full object-cover">
             <div class="flex flex-col p-5 sm:p-7 flex-1 justify-between">
               <div class="flex items-center mb-4">
                 <div>
@@ -575,7 +575,7 @@
             </div>
           </div>
           <div class="bg-white border border-black rounded-xl shadow-md flex flex-col hover:shadow-xl transition overflow-hidden">
-            <img src="assets/pkl.jpg" alt="Behance Feature" class="h-[120px] sm:h-[160px] w-full object-cover" />
+            <img src="assets/pkl.jpg" alt="Behance Feature" class="h-[120px] sm:h-[160px] w-full object-cover">
             <div class="flex flex-col p-5 sm:p-7 flex-1 justify-between">
               <div class="flex items-center mb-4">
                 <div>
@@ -589,7 +589,7 @@
             </div>
           </div>
           <div class="bg-white border border-black rounded-xl shadow-md flex flex-col hover:shadow-xl transition overflow-hidden">
-            <img src="assets/webStatic.png" alt="Web Static Competition" class="h-[120px] sm:h-[160px] w-full object-cover" />
+            <img src="assets/webStatic.png" alt="Web Static Competition" class="h-[120px] sm:h-[160px] w-full object-cover">
             <div class="flex flex-col p-5 sm:p-7 flex-1 justify-between">
               <div class="flex items-center mb-4">
                 <div>
