--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
           <!-- Right: Image & Graphics -->
           <div class="flex-1 flex flex-col items-center justify-center relative mt-8 md:mt-0">
-            <img src="assets/myPhoto2.png" alt="Profile" class="rounded-lg w-[250px] sm:w-[300px] md:w-[350px] h-[350px] sm:h-[400px] md:h-[480px] object-cover object-top shadow-xl border-4 border-white relative z-20">
+            <img src="assets/myPhoto.png" alt="Profile" class="rounded-lg w-[250px] sm:w-[300px] md:w-[350px] h-[350px] sm:h-[400px] md:h-[480px] object-cover object-top shadow-xl border-4 border-white relative z-20">
             <span class="squiggle">
               <svg viewBox="0 0 32 32">
                 <path d="M2,16 C8,32 24,0 30,16" stroke="#111" stroke-width="2.5" fill="none"/>
